--- a/main.css
+++ b/main.css
@@ -18,10 +18,17 @@ svg {
     height: 100%;
 }
 
-.path {
+path {
     fill: none;
     stroke: #000000;
     stroke-width: 2;
+}
+
+polyline {
+    fill: none;
+    stroke: black;
+    stroke-width: 1;
+    stroke-dasharray: 4;
 }
 
 .point {
